Added MC-DiscordReward.